RESOLVED FIXED108112
position:fixed that doesn't render any content should not force compositing
https://bugs.webkit.org/show_bug.cgi?id=108112
Summary position:fixed that doesn't render any content should not force compositing
Simon Fraser (smfr)
Reported 2013-01-28 13:43:33 PST
boingboing.net has lots of layers, because of an empty position:fixed div. We should not make that composited.
Attachments
Patch (19.80 KB, patch)
2013-01-28 15:01 PST, Simon Fraser (smfr)
bdakin: review+
Radar WebKit Bug Importer
Comment 1 2013-01-28 13:44:21 PST
Simon Fraser (smfr)
Comment 2 2013-01-28 15:01:15 PST
Simon Fraser (smfr)
Comment 3 2013-01-28 20:18:54 PST
Note You need to log in before you can comment on or make changes to this bug.